# storyteller-api

./: .dockerignore  .env.celery.example  .env.example  .gitignore  Dockerfile  README.md  celery-setup.sh  configure-ports.sh  docker-compose.celery.yml  docker-compose.test.yml  docker-compose.yml  docker-setup.sh  llm_config.example.yaml  main.py  migrate_to_mysql.py  pyproject.toml  pytest.ini  test-setup.sh  update_dependencies.sh  worker.py
app/: main.py
app/celery_app/: __init__.py  celery.py  config.py
app/celery_app/tasks/: __init__.py  llm.py  stories.py
app/database/: __init__.py  connection.py
app/llm/: __init__.py  chains.py  config.py  models.py  prompts.py  services.py
app/models/: __init__.py  story.py
app/routers/: __init__.py  llm.py  stories.py  tasks.py
app/schemas/: __init__.py  async_responses.py  story.py
app/services/: __init__.py  task_service.py
database/: __init__.py  connection.py
init-scripts/: 01-init.sql
models/: __init__.py  story.py
performance_tests/: README.md  locustfile.py
reports/: README.md
reports/coverage/: .gitkeep
reports/performance/: .gitkeep
routers/: __init__.py  stories.py
schemas/: __init__.py  story.py
tests/: README.md  conftest.py  test_main.py  test_models.py  test_schemas.py
tests/e2e/: README.md  config.py  conftest.py  test_workflows.py  test_workflows_async.py
tests/integration/: test_api.py  test_integration.py
tests/llm/: README.md  __init__.py  conftest.py  conftest_llm.py  test_e2e.py  test_integration.py  test_integration_celery.py  test_llm_api.py  test_llm_api_async.py  test_llm_config.py  test_llm_service.py  test_unit.py
tests/performance/: README.md  config.py  locustfile.py
tests/shared/: README.md  __init__.py  test_integration.py
tests/stories/: README.md  __init__.py  conftest.py  test_e2e.py  test_integration.py  test_integration_async.py  test_integration_celery.py  test_unit.py
tests/tasks/: README.md  __init__.py  conftest.py  test_celery_integration.py  test_integration.py  test_task_service.py  test_tasks_api.py  test_unit.py
tests/unit/: test_main.py  test_models.py  test_schemas.py
